--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@angular/upgrade": "2.1.2",
     "bootstrap-sass": "3.3.7",
     "core-js": "2.4.1",
-    "ng2-bootstrap": "1.1.14",
-    "ng2-webstorage": "^1.3.3",
+    "ng2-bootstrap": "1.1.16",
+    "ng2-webstorage": "1.3.3",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "0.6.23"
   },
